<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/d10dp">

    <RelativeLayout
        android:id="@+id/rvTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/label_change_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/s20sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:background="@null"
            android:contentDescription="@string/space"
            android:id="@+id/closeBtn"
            android:layout_alignParentEnd="true"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/ic_delete_forever_black_24dp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/rvTitle"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d10dp"
        android:layout_width="match_parent">

        <TextView
            android:drawableTop="@drawable/ic_camera_alt_black_24dp"
            android:gravity="center"
            android:id="@+id/tv_camera"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:text="@string/label_camera"
            android:textColor="@color/black"
            android:textSize="@dimen/s16sp" />

        <TextView
            android:drawableTop="@drawable/ic_camera_black_24dp"
            android:gravity="center"
            android:id="@+id/tv_gallery"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:text="@string/label_gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/s16sp" />

        <TextView
            android:drawableTop="@drawable/ic_delete_forever_black_24dp"
            android:gravity="center"
            android:id="@+id/tv_remove"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:text="@string/label_remove"
            android:textColor="@color/black"
            android:textSize="@dimen/s16sp" />
    </LinearLayout>
</RelativeLayout>